--- a/FitnessApp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/FitnessApp/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,12 +9,22 @@
         android:id="@+id/navigation_home"
         android:name="com.example.fitnessapp.ui.home.HomeFragment"
         android:label="@string/title_edzesek"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_dashboard"
+            app:destination="@id/navigation_dashboard"
+            app:popUpTo="@id/navigation_home" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.fitnessapp.ui.dashboard.DashboardFragment"
         android:label="@string/title_profil"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard" >
+        <action
+            android:id="@+id/action_navigation_dashboard_to_navigation_home"
+            app:destination="@id/navigation_home"
+            app:popUpToInclusive="false" />
+    </fragment>
 
 </navigation>
