--- a/FitnessApp/app/src/main/res/layout/list_one_row.xml
+++ b/FitnessApp/app/src/main/res/layout/list_one_row.xml
@@ -1,5 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@id/kepTextView"
+        android:layout_width="130dp"
+        android:layout_height="match_parent"
+        tools:ignore="MissingConstraints"
+        tools:text="Android" />
+
+    <TextView
+        android:id="@id/elemTextView"
+        android:layout_width="150dp"
+        android:layout_height="match_parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="130dp"
+        tools:layout_editor_absoluteY="0dp"
+        tools:text="Proba"/>
+
+    <TextView
+        android:id="@id/ismetlesTextView"
+        android:layout_width="130dp"
+        android:layout_height="match_parent"
+
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="280dp"
+        tools:layout_editor_absoluteY="0dp"
+        tools:text="Valami" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
