--- a/FitnessApp/app/src/main/res/values/themes.xml
+++ b/FitnessApp/app/src/main/res/values/themes.xml
@@ -13,5 +13,6 @@
         <item name="android:statusBarColor">@color/main_title_bar</item>
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/grey</item>
     </style>
 </resources>
